Changes for 1.5.1
* Allowed changes to all attachments to be undone and redone in the history panel, by ensuring each setter has an additional setter for an object of the field's type. (veqryn)

* Preventing history panel from updating if moused over, and allowing it to scroll down if not. (frigoref & veqryn)

* Allowing route to recalculate if only air can make it. (frigoref)

* More optimizations of getBestRoute. Also changing "Parse Selected" to be default parsing strategy of maps. (veqryn)

* Changing getBestRoute to not use territories for which the owner's relationship with us does not allow us to pass. (veqryn)

* Fixing getBestRoute to never use impassible and restricted territories. (veqryn)

* Adding Global 1940 as test xml. (veqryn)

* Fixing weird tech attachment getters to use booleans rather than strings. (veqryn)

* Making sure that all attachment variables that start out as Null, can return to being null again through their setter. (veqryn)

* Fixing various errors introduced into casualty selection. (veqryn)

* Fixed null pointer error for players who have damaged units but no repair frontier. (veqryn)

* Adding Europe 1940 as test xml. (veqryn)

* Fixed more "Lock not held" errors, and a potential null pointer in the battle calculator. (veqryn)

* Possible fix for ConcurrentModificationException in BattleModel.refresh -> DiceRoll.isAmphibiousMarine -> BattleTracker.getPendingBattleSites. (veqryn)

* Fixing bug with displaying up total resources when more than one unit creates resources. (veqryn)

* Allowed users to use Edit Mode to create new units for normal players, based on both their production frontier and any units they have on the board. (veqryn)

* Allowing users to use Edit Mode to create and place new "Neutral" (null player) units, but only selecting from ones on the board. (veqryn)

* Allowing users to Battle Calc against any "Neutral" (null player) units that are still on the board. (veqryn)
