@@ -1402,7 +1402,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					if (t.getPlayerAttachmentName().getFirst().equals("PlayerAttachment"))
 					{
 						final PlayerAttachment attachment = PlayerAttachment.get(aPlayer, t.getPlayerAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1415,7 +1415,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					else if (t.getPlayerAttachmentName().getFirst().equals("RulesAttachment"))
 					{
 						final RulesAttachment attachment = RulesAttachment.get(aPlayer, t.getPlayerAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1428,7 +1428,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					else if (t.getPlayerAttachmentName().getFirst().equals("TriggerAttachment"))
 					{
 						final TriggerAttachment attachment = TriggerAttachment.get(aPlayer, t.getPlayerAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1441,7 +1441,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					else if (t.getPlayerAttachmentName().getFirst().equals("TechAttachment"))
 					{
 						final TechAttachment attachment = TechAttachment.get(aPlayer, t.getPlayerAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1454,7 +1454,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					else if (t.getPlayerAttachmentName().getFirst().equals("PoliticalActionAttachment"))
 					{
 						final PoliticalActionAttachment attachment = PoliticalActionAttachment.get(aPlayer, t.getPlayerAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1497,7 +1497,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					if (t.getTerritoryAttachmentName().getFirst().equals("RelationshipTypeAttachment"))
 					{
 						final RelationshipTypeAttachment attachment = RelationshipTypeAttachment.get(aRelationshipType, t.getRelationshipTypeAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1544,7 +1544,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 						final TerritoryAttachment attachment = TerritoryAttachment.get(aTerritory, t.getTerritoryAttachmentName().getSecond());
 						if (attachment == null)
 							throw new IllegalStateException("Triggers: No territory attachment for:" + aTerritory.getName()); // water territories may not have an attachment, so this could be null
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1557,7 +1557,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					else if (t.getTerritoryAttachmentName().getFirst().equals("CanalAttachment"))
 					{
 						final CanalAttachment attachment = CanalAttachment.get(aTerritory, t.getTerritoryAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1606,7 +1606,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					if (t.getTerritoryEffectAttachmentName().getFirst().equals("TerritoryEffectAttachment"))
 					{
 						final TerritoryEffectAttachment attachment = TerritoryEffectAttachment.get(aTerritoryEffect, t.getTerritoryEffectAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1649,7 +1649,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					if (t.getUnitAttachmentName().getFirst().equals("UnitAttachment"))
 					{
 						final UnitAttachment attachment = UnitAttachment.get(aUnitType, t.getUnitAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
@@ -1662,7 +1662,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment implements ICon
 					else if (t.getUnitAttachmentName().getFirst().equals("UnitSupportAttachment"))
 					{
 						final UnitSupportAttachment attachment = UnitSupportAttachment.get(aUnitType, t.getUnitAttachmentName().getSecond());
-						if (attachment.getRawProperty(property.getFirst()).equals(newValue))
+						if (attachment.getRawPropertyString(property.getFirst()).equals(newValue))
 							continue;
 						if (clearFirst && newValue.length() < 1)
 							change.add(ChangeFactory.attachmentPropertyClear(attachment, property.getFirst(), true));
