@@ -13,13 +13,12 @@
  */
 package games.strategy.util;
 
-import javax.swing.JLabel;
-
+import games.strategy.triplea.attatchments.RulesAttachment;
 import junit.framework.TestCase;
 
 public class PropertyUtilTest extends TestCase
 {
-	public void testGet()
+	/*public void testGet()
 	{
 		final JLabel label = new JLabel("TestCase");
 		assertEquals("TestCase", PropertyUtil.get("text", label));
@@ -37,5 +36,20 @@ public class PropertyUtilTest extends TestCase
 		final JLabel label = new JLabel();
 		PropertyUtil.set("IconTextGap", 10, label);
 		PropertyUtil.get("IconTextGap", label);
+	}*/
+
+	public void testGetFieldObject()
+	{
+		final RulesAttachment at = new RulesAttachment("test", null, null);
+		int uses = (Integer) PropertyUtil.getPropertyFieldObject("uses", at);
+		// default value should be -1
+		assertEquals(-1, uses);
+		PropertyUtil.set("uses", "3", at);
+		uses = (Integer) PropertyUtil.getPropertyFieldObject("uses", at);
+		assertEquals(3, uses);
+		final IntegerMap<String> unitPresence = new IntegerMap<String>();
+		unitPresence.add("Blah", 3);
+		PropertyUtil.set("unitPresence", unitPresence, at);
+		assertEquals(unitPresence, PropertyUtil.getPropertyFieldObject("unitPresence", at));
 	}
 }
